Fixed URL teaser copy overlapping preview-petition actions

--- a/src/components/PreviewPetition/preview-petition.scss
+++ b/src/components/PreviewPetition/preview-petition.scss
@@ -12,5 +12,5 @@
   padding: 10px 15px 0;
   background-color: color('white');
   border-top: 1px solid color('grey');
-  z-index: 1;
+  z-index: 10;
 }
